--- a/assets/scss/events/_event-short.scss
+++ b/assets/scss/events/_event-short.scss
@@ -11,7 +11,7 @@
     font-size: 13px;
     @include whitney-medium;
     text-transform: uppercase;
-    margin: 8px 0;
+    margin: 0 0 8px 0;
   }
 
   p {
